# tradesignals

./: .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  noxfile.py  pyproject.toml
assets/: spinner.component.html
docs/: conf.py  index.md  reference.md  streaming_pipelines.md  usage.md
docs/{{ cookiecutter.name }}/: pyproject.toml
docs/{{ cookiecutter.name }}/{{ cookiecutter.name }}/: Dockerfile  README.md  pipeline.py  pyproject.toml
docs/{{ cookiecutter.name }}/{{ cookiecutter.name }}/lib/: __init__.py  avro_decimal.py  databento_utils.py  producer.py  providers.py  types.py
docs/{{ cookiecutter.name }}/{{ cookiecutter.name }}/lib/calendars/: market_calendar.py
docs/{{ cookiecutter.name }}/{{ cookiecutter.name }}/schemas/: avro_decimal.py  avro_io.py  read_schema.avsc  write_schema.avsc
scripts/: docker.sh  pipelines.sh
src/core/: __init__.py  app.py
src/core/calcs/: __init__.py  option_pricing.py
src/core/utils/: __init__.py  path_utils.py
src/pipelines/: config.yml  runner.py
src/pipelines/avro/: avro_schema.py
src/pipelines/equity_trades/: README.md  pipeline.py  pyproject.toml  requirements.txt
src/pipelines/equity_trades/equity_trades/: pipeline.py
src/pipelines/equity_trades/src/equity_trades/: __init__.py
src/pipelines/equity_trades/src/equity_trades/lib/: databento_utils.py
src/pipelines/equity_trades/src/equity_trades/lib/calendars/holidays/: nyse.py
src/pipelines/kafka/: admin.py  avro1.py  avro_client.py  avro_utils.py  pipeline_manager.py  producer.py  test.py  types.py  x.py
src/pipelines/option_trades/: Dockerfile  pyproject.toml  requirements.txt
src/pipelines/option_trades/option_trades/: __init__.py  pipeline.py
src/pipelines/option_trades/src/option_trades/: __init__.py  flink_sql.py  output_schema.avsc  pipeline.py
src/pipelines/option_trades/src/option_trades/lib/: __init__.py  producer.py  types.py  validators.py
src/pipelines/option_trades/src/option_trades/lib/calendars/: __init__.py  calendar.py  class_registry.py
src/pipelines/schemas/: __init__.py  equity_tbbo-value.avsc  global_key_schema.avsc  option_tbbo-value.avsc
src/pipelines/template/: Dockerfile  equity_trades-value.avsc
src/pipelines/template/src/template/lib/calendars/: calendar.py
src/streaming/: base.py  controller.py  decorators.py  streaming_application.py  types.py  web.py
src/streaming/async/: websocket.py
src/streaming/pipelines/: config.yaml  topics.yaml
src/streaming/pipelines/example_pipeline/: config.yaml
src/tradesignals/common/: __init__.py  constants.py  market_calendar.py  publishers.py  validators.py
src/tradesignals/common/calcs/: __init__.py  options.py
src/tradesignals/common/kafka/: __init__.py
src/tradesignals/common/types/: __init__.py  enums.py  extended_types.py  symbol.py
src/tradesignals/common/types/core/: __init__.py  _date.py  _datetime.py  _decimal.py  _timestamp.py
src/tradesignals/schemas/: option_trades-value.avsc
src/tradesignals/streaming/: admin.py  librdkafka.py  producer.py
src/tradesignals/utils/: path.py
tests/: __init__.py  test_main.py
