[tool.poetry]
name = "equity_trades"
version = "0.1.0"
description = ""
authors = ["Mac Anderson <mac@macanderson.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
tradesignals = {path = "../../.."}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
